# filesff

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml
examples/: new_formatter.py  use_accessor.py
filesff/: bz2s.py  caps.py  csvs.py  file_accessors.py  file_pointers.py  files.py  files_handlers.py  formatted_file.py  formatted_files.py  gzips.py  json_file.py  json_files.py  json_lines_file.py  json_lines_files.py  jsons.py  msgpacks.py  paths.py  pipes.py  protobuf_files.py  protobufs.py  s3.py
filesff/accessors/: base.py  csvs.py  json_files.py  json_lines_files.py  jsons.py  protobuf_files.py  protobufs.py
filesff/core/: __init__.py  accessors.py  files.py  files_handlers.py  formatters.py  handlers.py  pointers.py
filesff/formatters/: csvs.py  jsons.py  protobufs.py
tests/: test_caps.py  test_files.py  test_jsons.py  test_msgpacks.py
