[tool.poetry]
name = "filesff"
version = "0.0.3"
description = "Files for Fun; Python Utilities"
authors = ["Netanel Revah <netanelrevah@outlook.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ujson = { version = "^5.6.0", optional = true }
protobuf = {version = "^4.22.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-tstcls = { git = "https://github.com/netanelrevah/tstcls" }
pytest-parametrization = "^2022.2.1"
mypy = "^0.991"
types-protobuf = "^4.21.0.3"
types-ujson = "^5.7.0.0"
black = "*"
isort = "*"
pyupgrade = "^3.3.1"
ruff = "^0.0.247"

[tool.poetry.extras]
ujson = ["ujson"]
protobuf = ["protobuf"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120